--- a/aboutUs.html
+++ b/aboutUs.html
@@ -58,5 +58,6 @@
       </div>
       <footer>&copy; 2024 mustbebuilt</footer>
     </div>
+    <script src="js/main.js"></script>
   </body>
 </html>
