--- a/exchangeRate.html
+++ b/exchangeRate.html
@@ -47,5 +47,7 @@
 
       <footer>&copy; 2024 mustbebuilt</footer>
     </div>
+    <script src="js/main.js"></script>
+    <script src="js/exchange.js"></script>
   </body>
 </html>
